--- a/README
+++ b/README
@@ -3,7 +3,8 @@ gettext lint tools
 Pedro Morais <morais@kde.org>
 José Nuno Pires <jncp@netcabo.pt>
 João Neves <joao@silvaneves.org>
-(c) Copyright 2003 - 2006
+Sven Strickroth <email@cs-ware.de>
+(c) Copyright 2003 - 2006, 2024
 Distributable under the terms of the GPL - see COPYING
 
 This packages includes the following tools:
